# Moveit_servo-KinovaGen3

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
volumes/kortex_bringup_config/: Nservo.yaml
volumes/kortex_moveit_config_kinova_gen3_7dof_moveit_config_launch/: servo.launch.py  sumne.py
volumes/servo_keyboard_kinova/: CMakeLists.txt  package.xml
volumes/servo_keyboard_kinova/src/: servo_keyboard_kinova.cpp
